Renamed ShopStalls64 -> Market64

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,5 +1,5 @@
-# ShopStalls64 v0.0.0-beta by @tbm00
-# https://github.com/tbm00/ShopStalls64
+# Market64 v0.0.0-beta by @tbm00
+# https://github.com/tbm00/Market64
 
 enabled: true
 
