--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>dev.tbm00</groupId>
-    <artifactId>ShopStalls64</artifactId>
+    <artifactId>Market64</artifactId>
     <version>0.0.0-beta</version>
     <packaging>jar</packaging>
 
-    <name>ShopStalls64</name>
+    <name>Market64</name>
 
-    <description>This plugin expands DisplayShops and adds user-friendly shop stalls</description>
+    <description>This plugin manages MC64's market</description>
     <properties>
         <java.version>17</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
