--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,19 +1,19 @@
-name: ShopStalls64
+name: Market64
 version: ${project.version}
 description: ${project.description}
 author: tbm00
-main: dev.tbm00.spigot.shopstalls64.ShopStalls64
+main: dev.tbm00.spigot.market64.Market64
 api-version: 1.17
 depend: [DisplayShops, GriefDefender, Vault, Rep64]
 commands:
   teststall:
-    description: Main command for ShopStalls64
+    description: Main command for Market64
   teststalladmin:
-    description: Admin commands for ShopStalls64
+    description: Admin commands for Market64
 permissions:
-  shopstalls64.player:
+  market64.player:
     description: Ability to use player commands
     default: true
-  shopstalls64.admin:
+  market64.admin:
     description: Ability to use admin commands
     default: op
