Implemented VillagerGui & listener
+ refactored claim listeners into one class

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -15,6 +15,9 @@ permissions:
   market64.player:
     description: Ability to use player commands
     default: true
+  market64.edit-path:
+    description: Ability to use break the market path
+    default: op
   market64.admin:
     description: Ability to use admin commands
     default: op
