Implemented mod perms, v0.1.1-beta

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -21,3 +21,6 @@ permissions:
   market64.admin:
     description: Ability to use admin commands
     default: op
+  market64.mod:
+    description: Ability to use mod commands
+    default: op
