--- a/pom.xml
+++ b/pom.xml
@@ -122,11 +122,11 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.github.XZot1K</groupId>
-            <artifactId>DisplayShops</artifactId>
-            <version>2.1.2</version>
+            <groupId>dev.tbm00</groupId>
+            <artifactId>PlayerShops64</artifactId>
+            <version>0.0.0-beta</version>
             <scope>system</scope>
-            <systemPath>${project.basedir}/depend/DisplayShops-2_1_2.jar</systemPath>
+            <systemPath>${project.basedir}/depend/PlayerShops64-0.0.0-beta.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>dev.triumphteam</groupId>
@@ -143,6 +143,11 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>3.17.0</version>
+        </dependency>
+        <dependency>
+            <groupId>net.kyori</groupId>
+            <artifactId>event-api</artifactId>
+            <version>3.0.0</version>
         </dependency>
     </dependencies>
 </project>
