--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>dev.tbm00</groupId>
     <artifactId>Market64</artifactId>
-    <version>0.1.7-beta</version>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
 
     <name>Market64</name>
@@ -124,9 +124,9 @@
         <dependency>
             <groupId>dev.tbm00</groupId>
             <artifactId>PlayerShops64</artifactId>
-            <version>0.0.0-beta</version>
+            <version>1.0.0</version>
             <scope>system</scope>
-            <systemPath>${project.basedir}/depend/PlayerShops64-0.0.0-beta.jar</systemPath>
+            <systemPath>${project.basedir}/depend/PlayerShops64-1.0.0.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>dev.triumphteam</groupId>
